Fixed jumping layout between question/answer in edit-mode.

--- a/Memosport/wwwroot/less/main.less
+++ b/Memosport/wwwroot/less/main.less
@@ -2221,7 +2221,7 @@ textarea.ict-question-answer-text {
         @PaddingY: 5px;
         @Height: @GlobalButtonHeight + @PaddingY + @PaddingY;
 
-        line-height: @Height;
+        line-height: @Height - 1px;
         height: @Height;
         border-bottom: 1px solid @GlobalBorderColor;
         padding: 0px @PaddingY;
